stye: update page display

--- a/src/app/shared/layout/navbar/navbar.component.html
+++ b/src/app/shared/layout/navbar/navbar.component.html
@@ -9,7 +9,7 @@
       </button>
       <ul class="hidden sm:flex items-center space-x-12 lg:space-x-16">
         <a routerLink="/">
-          <img src="/src/assets/images/simplify.png" alt="Simplify Logo">
+          <img src="/src/assets/logo/simplify.svg" alt="Simplify Logo">
         </a>
           @for(link of navbarLinks; track link.href){
           <li>
@@ -53,7 +53,7 @@
       <div class="mt-5 flex-1 h-0 overflow-y-auto">
         <ul class="px-4 space-y-4">
           <a routerLink="/">
-            <img src="/src/assets/images/simplify.png" alt="Simplify Logo">
+            <img src="/src/assets/logo/simplify.svg" alt="Simplify Logo">
           </a>
           @for(link of navbarLinks; track link.href){
             <li>
