--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -3,31 +3,23 @@
     <a routerLink="/" class="hidden sm:flex flex-col sm:flex-row items-center px-4 md:px-6 py-6 w-22 sm:w-auto">
       <img src="/src/assets/logo/simplify.svg" alt="Simplify Logo">
     </a>
-    <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto hover:bg-gradient-to-tr from-pink-50 to-blue-100 rounded-lg hover:shadow-sm">
-      <fa-icon [icon]="faHouse" class="inline-flex justify-center items-center bg-gray-100 rounded-lg w-7 h-7 text-sm sm:text-base text-gray-800"></fa-icon>
-      <a routerLink="/dashboard" class="mt-2 sm:mt-0 sm:ml-2 text-sm font-medium font-sans text-gray-800 sm:text-base hover:text-gray-900">
-        Dashboard
-      </a>
-    </li>
-    <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto hover:bg-gradient-to-tr from-pink-50 to-blue-100 rounded-lg hover:shadow-sm">
-      <fa-icon [icon]="faClockRotateLeft" class="inline-flex justify-center items-center bg-gray-100 rounded-lg w-7 h-7 text-sm sm:text-base text-gray-800"></fa-icon>
-      <a routerLink="/history" class="mt-2 sm:mt-0 sm:ml-2 text-sm font-medium font-sans text-gray-800 sm:text-base hover:text-gray-900">
-        History
-      </a>
-    </li>
+    @for(link of navbarLinksUp; track link.href){
+      <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto hover:bg-gradient-to-tr from-pink-50 to-blue-100 rounded-lg hover:shadow-sm">
+        <fa-icon [icon]="link.icon" class="inline-flex justify-center items-center bg-gray-100 rounded-lg w-7 h-7 text-sm sm:text-base text-gray-800"></fa-icon>
+        <a routerLink="{{ link.href }}" class="mt-2 sm:mt-0 sm:ml-2 text-sm font-medium font-sans text-gray-800 sm:text-base hover:text-gray-900">
+          {{ link.label }}
+        </a>
+      </li>
+    }
     <span class="hidden sm:inline-block my-2 bg-gray-300 h-0.5 w-full rounded-full"></span>
-    <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto hover:bg-gradient-to-tr from-pink-50 to-blue-100 rounded-lg hover:shadow-sm">
-      <fa-icon [icon]="faUser" class="inline-flex justify-center items-center bg-gray-100 rounded-lg w-7 h-7 text-sm sm:text-base text-gray-800"></fa-icon>
-      <a routerLink="/account" class="mt-2 sm:mt-0 sm:ml-2 text-sm font-medium font-sans text-gray-800 sm:text-base hover:text-gray-900">
-        Account
-      </a>
-    </li>
-    <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto hover:bg-gradient-to-tr from-pink-50 to-blue-100 rounded-lg hover:shadow-sm">
-      <fa-icon [icon]="faKey" class="inline-flex justify-center items-center bg-gray-100 rounded-lg w-7 h-7 text-sm sm:text-base text-gray-800"></fa-icon>
-      <a routerLink="/api-key" class="mt-2 sm:mt-0 sm:ml-2 text-sm font-medium font-sans text-gray-800 sm:text-base hover:text-gray-900">
-        API Key
-      </a>
-    </li>
+    @for(link of navbarLinksDown; track link.href){
+      <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto hover:bg-gradient-to-tr from-pink-50 to-blue-100 rounded-lg hover:shadow-sm">
+        <fa-icon [icon]="link.icon" class="inline-flex justify-center items-center bg-gray-100 rounded-lg w-7 h-7 text-sm sm:text-base text-gray-800"></fa-icon>
+        <a routerLink="{{ link.href }}" class="mt-2 sm:mt-0 sm:ml-2 text-sm font-medium font-sans text-gray-800 sm:text-base hover:text-gray-900">
+          {{ link.label }}
+        </a>
+      </li>
+    }
     <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto hover:bg-gradient-to-tr from-pink-50 to-blue-100 rounded-lg hover:shadow-sm">
       <fa-icon [icon]="faRightFromBracket" class="inline-flex justify-center items-center bg-gray-100 rounded-lg w-7 h-7 text-sm sm:text-base text-pink-700"></fa-icon>
       <button (click)="logout()" class="mt-2 sm:mt-0 sm:ml-2 text-sm font-medium font-sans text-pink-700 sm:text-base hover:text-pink-800">
