--- a/src/app/pages/page-generate-qrcode/form-text/form-text.component.html
+++ b/src/app/pages/page-generate-qrcode/form-text/form-text.component.html
@@ -13,6 +13,7 @@
       name="text" 
       id="text"
       formControlName="text"
+      required
       class="w-full h-32 px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-300 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-pink-400 focus:ring-2 focus:ring-pink-300 placeholder:text-gray-300 focus:placeholder:text-gray-100"
     >
     </textarea>
