--- a/src/app/shared/ui/modal-shorthen-url/modal-shorthen-url.component.html
+++ b/src/app/shared/ui/modal-shorthen-url/modal-shorthen-url.component.html
@@ -1,5 +1,5 @@
 <div class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
-  <div class="bg-gradient-to-tr w-5/6 sm:w-3/4 from-pink-50 to-blue-200 rounded-2xl pb-4 pt-3 px-5 sm:pb-8 sm:pt-6 sm:px-10 border-2 border-gray-100">
+  <div class="bg-gradient-to-tr w-5/6 sm:w-3/4 from-pink-50 to-blue-200 rounded-2xl pb-6 pt-3 px-6 sm:pb-8 sm:pt-4 sm:px-8 border-2 border-gray-100">
     <div class="flex justify-end mb-4">
       <button (click)="closeModal()" class="inline-flex items-center justify-center">
         <fa-icon [icon]="faTimes" class="text-xl sm:text-2xl text-pink-800 hover:text-pink-900"></fa-icon>
@@ -11,7 +11,7 @@
         {{ urlShort }}
         </p>
       </div>
-      <button (click)="copyToClipboard()" class="inline-flex bg-blue-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
+      <button (click)="copyToClipboard()" class="inline-flex bg-blue-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-2.5 font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
         Copy
       </button>
     </div>
