--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
       <img src="/src/assets/logo/simplify.svg" alt="Simplify Logo">
     </a>
     @for(link of navbarLinksUp; track link.href){
-      <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto hover:bg-gradient-to-tr from-pink-50 to-blue-100 rounded-lg hover:shadow-sm">
+      <li [ngClass]="{ 'bg-gray-100 bg-opacity-50': isRouteActive(link.href), '': !isRouteActive(link.href)}"  class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto rounded-lg">
         <fa-icon [icon]="link.icon" class="inline-flex justify-center items-center bg-gray-100 rounded-lg w-7 h-7 text-sm sm:text-base text-gray-800"></fa-icon>
         <a routerLink="{{ link.href }}" class="mt-2 sm:mt-0 sm:ml-2 text-sm font-medium font-sans text-gray-800 sm:text-base hover:text-gray-900">
           {{ link.label }}
@@ -13,14 +13,14 @@
     }
     <span class="hidden sm:inline-block my-2 bg-gray-300 h-0.5 w-full rounded-full"></span>
     @for(link of navbarLinksDown; track link.href){
-      <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto hover:bg-gradient-to-tr from-pink-50 to-blue-100 rounded-lg hover:shadow-sm">
+      <li [ngClass]="{ 'bg-gray-100 bg-opacity-50': isRouteActive(link.href), '': !isRouteActive(link.href)}"  class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto rounded-lg">
         <fa-icon [icon]="link.icon" class="inline-flex justify-center items-center bg-gray-100 rounded-lg w-7 h-7 text-sm sm:text-base text-gray-800"></fa-icon>
         <a routerLink="{{ link.href }}" class="mt-2 sm:mt-0 sm:ml-2 text-sm font-medium font-sans text-gray-800 sm:text-base hover:text-gray-900">
           {{ link.label }}
         </a>
       </li>
     }
-    <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto hover:bg-gradient-to-tr from-pink-50 to-blue-100 rounded-lg hover:shadow-sm">
+    <li class="flex flex-col sm:flex-row items-center px-4 md:px-6 py-2 w-22 sm:w-auto rounded-lg">
       <fa-icon [icon]="faRightFromBracket" class="inline-flex justify-center items-center bg-gray-100 rounded-lg w-7 h-7 text-sm sm:text-base text-pink-700"></fa-icon>
       <button (click)="logout()" class="mt-2 sm:mt-0 sm:ml-2 text-sm font-medium font-sans text-pink-700 sm:text-base hover:text-pink-800">
         Logout
