--- a/src/app/pages/page-generate-qrcode/page-generate-qrcode.component.html
+++ b/src/app/pages/page-generate-qrcode/page-generate-qrcode.component.html
@@ -13,20 +13,32 @@
       <div class="grid grid-cols-3 sm:grid-cols-4 lg:grid-cols-6 gap-5 sm:gap-6">
         @for(qrcodeOption of qrcodeOptions; track qrcodeOption){
         <button 
-            class="bg-gradient-to-tr from-pink-50 to-blue-100 w-24 sm:w-28 border-2 border-gray-100 py-2 px-2 sm:py-3 sm:px-3 rounded-xl hover:bg-pink-100 hover:bg-opacity-50"
+            class="bg-gradient-to-tr from-pink-50 to-blue-100 w-24 sm:w-28 border-2 border-gray-100 py-2 px-2 sm:py-3 sm:px-3 rounded-xl"
             [ngClass]="{'border-pink-300': selectedOption === qrcodeOption.option}"
             (click)="selectedOption = qrcodeOption.option"
           >
             @if(qrcodeOption.icon === faLink || qrcodeOption.icon === faWifi){
-              <fa-icon [icon]="qrcodeOption.icon" class="inline-flex bg-gray-100 rounded-full w-10 sm:w-12 h-10 sm:h-12 px-2 sm:px-2.5 py-2.5 sm:py-3 text-xl sm:text-2xl text-pink-700"></fa-icon>                
+              <fa-icon 
+                [icon]="qrcodeOption.icon"
+                [ngClass]="{'bg-pink-50 text-pink-700': selectedOption === qrcodeOption.option, 'bg-gray-100 text-gray-800': selectedOption !== qrcodeOption.option}"
+                class="inline-flex rounded-full w-10 sm:w-12 h-10 sm:h-12 px-2 sm:px-2.5 py-2.5 sm:py-3 text-xl sm:text-2xl"
+              ></fa-icon>                
             }
             @else if (qrcodeOption.icon === faEnvelope) {
-              <fa-icon [icon]="qrcodeOption.icon" class="inline-flex bg-gray-100 rounded-full w-10 sm:w-12 h-10 sm:h-12 px-2.5 sm:px-3 py-2.5 sm:py-3 text-xl sm:text-2xl text-pink-700"></fa-icon>
+              <fa-icon 
+                [icon]="qrcodeOption.icon" 
+                [ngClass]="{'bg-pink-50 text-pink-700': selectedOption === qrcodeOption.option, 'bg-gray-100 text-gray-800': selectedOption !== qrcodeOption.option}"
+                class="inline-flex rounded-full w-10 sm:w-12 h-10 sm:h-12 px-2.5 sm:px-3 py-2.5 sm:py-3 text-xl sm:text-2xl"
+              ></fa-icon>
             }
             @else {
-              <fa-icon [icon]="qrcodeOption.icon" class="inline-flex bg-gray-100 rounded-full w-10 sm:w-12 h-10 sm:h-12 px-3 sm:px-3.5 py-2.5 sm:py-3 text-xl sm:text-2xl text-pink-700"></fa-icon>
+              <fa-icon 
+                [icon]="qrcodeOption.icon"
+                [ngClass]="{'bg-pink-50 text-pink-700': selectedOption === qrcodeOption.option, 'bg-gray-100 text-gray-800': selectedOption !== qrcodeOption.option}"
+                class="inline-flex rounded-full w-10 sm:w-12 h-10 sm:h-12 px-3 sm:px-3.5 py-2.5 sm:py-3 text-xl sm:text-2xl"
+              ></fa-icon>
             }
-            <p class="mt-2 font-medium font-sans text-sm sm:text-base text-gray-800">
+            <p [ngClass]="{'text-pink-700': selectedOption === qrcodeOption.option, 'text-gray-800': selectedOption !== qrcodeOption.option}" class="mt-2 font-medium font-sans text-sm sm:text-base text-gray-800">
               {{ qrcodeOption.name }}
             </p>
           </button>
