feat: add page history shorthen url and qrcode(undone)

--- a/src/app/pages/page-generate-qrcode/form-whatsapp/form-whatsapp.component.html
+++ b/src/app/pages/page-generate-qrcode/form-whatsapp/form-whatsapp.component.html
@@ -25,7 +25,7 @@
     }
   </div>
   <div class="flex justify-end mt-6 sm:mt-8">
-    <button type="submit" class="bg-pink-700 text-white text-sm sm:text-base rounded-xl px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-pink-800 hover:text-pink-100">
+    <button type="submit" class="bg-pink-700 text-white text-sm sm:text-base rounded-xl px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-pink-800 hover:text-pink-100 text-center">
       @if(isLoading) {
         <app-loading-button></app-loading-button>
       } @else {
