--- a/src/app/pages/page-register/page-register.component.html
+++ b/src/app/pages/page-register/page-register.component.html
@@ -120,7 +120,7 @@
         }
       </div>
       <div class="flex justify-end mt-6">
-        <button type="submit" class="bg-gray-800 text-white text-sm sm:text-base rounded-xl w-full py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
+        <button type="submit" class="bg-gray-800 text-white text-sm sm:text-base rounded-xl w-full py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100 duration-100 ease-in">
           @if(isLoading){
             <app-loading-button></app-loading-button>
           } @else {
