--- a/src/app/pages/page-account/update-password/update-password.component.html
+++ b/src/app/pages/page-account/update-password/update-password.component.html
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class="flex flex-row justify-end items-center mt-6 sm:mt-8">
-      <button type="submit" [disabled]="!updatePasswordForm.valid" class="bg-gray-800 text-white text-sm sm:text-base rounded-xl px-4 sm:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
+      <button type="submit" [disabled]="!updatePasswordForm.valid" class="bg-gray-800 text-white text-sm sm:text-base rounded-xl px-4 sm:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100 duration-100 ease-in">
         @if(isLoading) {
           <app-loading-button></app-loading-button>
         } @else {
