--- a/src/app/pages/page-generate-qrcode/page-generate-qrcode.component.html
+++ b/src/app/pages/page-generate-qrcode/page-generate-qrcode.component.html
@@ -10,7 +10,7 @@
       </p>
     </div>
     <div class="flex flex-col items-center justify-center max-w-xl my-6 sm:my-8 md:mx-auto lg:max-w-3xl mx-6 sm:mx-8">
-      <div class="grid grid-cols-3 sm:grid-cols-4 lg:grid-cols-6 gap-5 sm:gap-6">
+      <div class="grid grid-cols-3 sm:grid-cols-4 lg:grid-cols-6 gap-4 md:gap-6">
         @for(qrcodeOption of qrcodeOptions; track qrcodeOption){
         <button 
             class="bg-gradient-to-tr from-pink-50 to-blue-100 w-24 sm:w-28 border-2 border-gray-100 py-2 px-2 sm:py-3 sm:px-3 rounded-xl"
