--- a/src/app/pages/page-generate-url/page-generate-url.component.html
+++ b/src/app/pages/page-generate-url/page-generate-url.component.html
@@ -51,7 +51,7 @@
         >
       </div>
       <div class="flex justify-end mt-6">
-        <button type="submit" [disabled]="!shotenUrlForm.valid" disabled class="bg-blue-700 text-white text-sm sm:text-base rounded-xl px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-blue-800 hover:text-blue-100">
+        <button type="submit" [disabled]="!shotenUrlForm.valid" disabled class="bg-blue-700 text-white text-sm sm:text-base rounded-xl px-6 md:px-8 py-2 md:py-2.5 font-medium font-sans hover:bg-blue-800 hover:text-blue-100 text-center">
           @if(isLoading) {
             <app-loading-button></app-loading-button>
           } @else {
