--- a/src/app/pages/page-login/page-login.component.html
+++ b/src/app/pages/page-login/page-login.component.html
@@ -68,7 +68,7 @@
         }
       </div>
       <div class="flex justify-center mt-6">
-        <button type="submit" [disabled]="!loginForm.valid" disabled class="bg-gray-800 text-white text-sm sm:text-base rounded-xl w-full py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
+        <button type="submit" [disabled]="!loginForm.valid" disabled class="bg-gray-800 text-white text-sm sm:text-base rounded-xl w-full py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100 duration-100 ease-in">
           @if(isLoading){
             <app-loading-button></app-loading-button>
           } @else {
