--- a/src/app/shared/ui/modal-qrcode/modal-qrcode.component.html
+++ b/src/app/shared/ui/modal-qrcode/modal-qrcode.component.html
@@ -1,8 +1,8 @@
 <div class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
   <div class="bg-gradient-to-tr w-auto from-pink-50 to-blue-200 rounded-2xl pb-6 pt-3 px-6 sm:pb-8 sm:pt-4 sm:px-8 border-2 border-gray-100">
     <div class="flex justify-end mb-4">
-      <button (click)="closeModal()" class="inline-flex items-center justify-center">
-        <fa-icon [icon]="faTimes" class="text-2xl sm:text-3xl text-pink-800 hover:text-pink-900"></fa-icon>
+      <button (click)="closeModal()" class="inline-flex px-2 items-center justify-center rounded-lg hover:bg-gray-200">
+        <fa-icon [icon]="faTimes" class="text-2xl sm:text-3xl text-pink-800"></fa-icon>
       </button>
     </div>
     <div class="flex flex-col justify-center items-center">
@@ -11,7 +11,7 @@
         src="{{ qrcode }}"
         alt="QR Code"
       >          
-      <button (click)="downloadQrcode()" class="mt-4 sm:mt-8 bg-pink-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-2.5 font-medium font-sans hover:bg-pink-800 hover:text-pink-100">
+      <button (click)="downloadQrcode()" class="mt-4 sm:mt-8 bg-pink-700 text-white text-sm sm:text-base rounded-xl px-4 md:px-6 py-2.5 font-medium font-sans hover:bg-pink-800 hover:text-pink-100 duration-100 ease-in">
         Download
       </button>
     </div>
