--- a/src/app/pages/page-account/update-password/update-password.component.html
+++ b/src/app/pages/page-account/update-password/update-password.component.html
@@ -1,83 +1,81 @@
 <div class="relative px-4 py-5 mx-auto w-full sm:min-w-xl md:max-w-screen-md lg:px-8 lg:py-10">
-  <form 
-    [formGroup]="updatePasswordForm"
-    (ngSubmit)="onSubmit()"
-    class="bg-gray-100 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 shadow-md"
-  >
-  @if(successMessage){
-    <app-alert-success 
-      [errorMessage]="successMessage" 
-      (clearMessage)="clearMessage()"
-    ></app-alert-success>
-  }
-  @if(errorMessage){
-    <app-alert-error 
-      [errorMessage]="errorMessage" 
-      (clearMessage)="clearMessage()"
-    ></app-alert-error>
-  }
-    <div class="grid grid-cols-3 items-center space-y-4 sm:space-y-5">
-      <div>
-        <label for="password" class="font-medium font-sans text-sm sm:text-base text-gray-800">
-          Password
-        </label>  
-      </div>
-      <div class="col-span-2">
-        <input 
-          type="password" 
-          id="password"
-          name="password"
-          formControlName="password"
-          required
-          minlength="12"
-          pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}"
-          class="col-span-2 w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-200 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-300 focus:ring-2 focus:ring-gray-200"
-        >
-        @if(updatePasswordForm.get('password')?.invalid && updatePasswordForm.get('password')?.touched) {
-          @if(updatePasswordForm.get('password')?.errors?.['required']) {
-            <span class="text-red-600 ml-1 text-xs sm:text-sm">Password is required</span>
-          } @else if (updatePasswordForm.get('password')?.errors?.['minlength']) {
-            <span class="text-red-600 ml-1 text-xs sm:text-sm">Password must be at least 12 characters</span>
-          } @else if (updatePasswordForm.get('password')?.errors?.['pattern']) {
-            <span class="text-red-600 ml-1 text-xs sm:text-sm">Password must contain at least one number, one uppercase and one lowercase letter</span>
+  <div class="bg-gray-100 border border-gray-300 rounded-2xl py-4 px-5 sm:py-8 sm:px-10">
+    @if(successMessage){
+      <app-alert-success 
+        [errorMessage]="successMessage" 
+        (clearMessage)="clearMessage()"
+      ></app-alert-success>
+    }
+    @if(errorMessage){
+      <app-alert-error 
+        [errorMessage]="errorMessage" 
+        (clearMessage)="clearMessage()"
+      ></app-alert-error>
+    }
+    <form [formGroup]="updatePasswordForm" (ngSubmit)="onSubmit()">
+      <div class="grid grid-cols-3 items-center gap-4 sm:gap-6">
+        <div>
+          <label for="password" class="font-medium font-sans text-sm sm:text-base text-gray-800">
+            Password
+          </label>  
+        </div>
+        <div class="col-span-2">
+          <input 
+            type="password" 
+            id="password"
+            name="password"
+            formControlName="password"
+            required
+            minlength="12"
+            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}"
+            class="col-span-2 w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-200 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-300 focus:ring-2 focus:ring-gray-200"
+          >
+          @if(updatePasswordForm.get('password')?.invalid && updatePasswordForm.get('password')?.touched) {
+            @if(updatePasswordForm.get('password')?.errors?.['required']) {
+              <span class="text-red-600 ml-1 text-xs sm:text-sm">Password is required</span>
+            } @else if (updatePasswordForm.get('password')?.errors?.['minlength']) {
+              <span class="text-red-600 ml-1 text-xs sm:text-sm">Password must be at least 12 characters</span>
+            } @else if (updatePasswordForm.get('password')?.errors?.['pattern']) {
+              <span class="text-red-600 ml-1 text-xs sm:text-sm">Password must contain at least one number, one uppercase and one lowercase letter</span>
+            }
           }
-        }
-      </div>
-      <div>
-        <label for="confirmPassword" class="font-medium font-sans text-sm sm:text-base text-gray-800">
-          Confirm Password
-        </label>  
-      </div>
-      <div class="col-span-2">
-        <input 
-          type="password" 
-          id="confirmPassword"
-          name="confirmPassword"
-          formControlName="confirmPassword"
-          required
-          minlength="12"
-          pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}"
-          class="col-span-2 w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-200 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-300 focus:ring-2 focus:ring-gray-200"
-        >
-        @if(updatePasswordForm.get('confirmPassword')?.invalid && updatePasswordForm.get('confirmPassword')?.touched) {
-          @if(updatePasswordForm.get('confirmPassword')?.errors?.['required']) {
-            <span class="text-red-600 ml-1 text-xs sm:text-sm">Confirm password is required</span>
-          } @else if (updatePasswordForm.get('confirmPassword')?.errors?.['minlength']) {
-            <span class="text-red-600 ml-1 text-xs sm:text-sm">Confirm password must be at least 12 characters</span>
-          } @else if (updatePasswordForm.get('confirmPassword')?.errors?.['pattern']) {
-            <span class="text-red-600 ml-1 text-xs sm:text-sm">Confirm password must contain at least one number, one uppercase and one lowercase letter</span>
+        </div>
+        <div>
+          <label for="confirmPassword" class="font-medium font-sans text-sm sm:text-base text-gray-800">
+            Confirm Password
+          </label>  
+        </div>
+        <div class="col-span-2">
+          <input 
+            type="password" 
+            id="confirmPassword"
+            name="confirmPassword"
+            formControlName="confirmPassword"
+            required
+            minlength="12"
+            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}"
+            class="col-span-2 w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-200 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-300 focus:ring-2 focus:ring-gray-200"
+          >
+          @if(updatePasswordForm.get('confirmPassword')?.invalid && updatePasswordForm.get('confirmPassword')?.touched) {
+            @if(updatePasswordForm.get('confirmPassword')?.errors?.['required']) {
+              <span class="text-red-600 ml-1 text-xs sm:text-sm">Confirm password is required</span>
+            } @else if (updatePasswordForm.get('confirmPassword')?.errors?.['minlength']) {
+              <span class="text-red-600 ml-1 text-xs sm:text-sm">Confirm password must be at least 12 characters</span>
+            } @else if (updatePasswordForm.get('confirmPassword')?.errors?.['pattern']) {
+              <span class="text-red-600 ml-1 text-xs sm:text-sm">Confirm password must contain at least one number, one uppercase and one lowercase letter</span>
+            }
           }
-        }
+        </div>
       </div>
-    </div>
-    <div class="flex flex-row justify-end items-center mt-6 sm:mt-8">
-      <button type="submit" [disabled]="!updatePasswordForm.valid" class="bg-gray-800 text-white text-sm sm:text-base rounded-xl px-4 sm:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100 duration-100 ease-in">
-        @if(isLoading) {
-          <app-loading-button></app-loading-button>
-        } @else {
-          Update Password
-        }
-      </button>
-    </div>
-  </form>
+      <div class="flex flex-row justify-end items-center mt-4 sm:mt-6">
+        <button type="submit" [disabled]="!updatePasswordForm.valid" class="bg-gray-800 text-white text-sm sm:text-base rounded-xl px-4 sm:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100 duration-100 ease-in">
+          @if(isLoading) {
+            <app-loading-button></app-loading-button>
+          } @else {
+            Update Password
+          }
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
