--- a/src/app/pages/page-account/update-profile/update-profile.component.html
+++ b/src/app/pages/page-account/update-profile/update-profile.component.html
@@ -1,10 +1,6 @@
 <div class="relative px-4 py-5 mx-auto w-full sm:min-w-xl md:max-w-screen-md lg:px-8 lg:py-10">
-  <form
-    [formGroup]="updateProfileForm"
-    (ngSubmit)="onSubmit()"
-    class="bg-gray-100 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 shadow-md"
-  >
-    <div class="grid grid-cols-3 items-center">
+  <div class="bg-gray-100 border border-gray-300 rounded-2xl py-4 px-5 sm:py-8 sm:px-10">
+    <div class="grid grid-cols-3 items-center mb-4 sm:mb-6">
       @if(!user.profileImage){
         <div class="w-16 h-16 sm:w-24 md:w-32 sm:h-24 md:h-32 rounded-full bg-gray-200 animate-pulse"></div>
       } @else {
@@ -27,81 +23,83 @@
         (clearMessage)="clearMessage()"
       ></app-alert-error>
     }
-    <div class="grid grid-cols-3 items-center mt-8 sm:mt-12 space-y-4 sm:space-y-5">
-      <div>
-        <label for="name" class="font-medium font-sans text-sm sm:text-base text-gray-800">
-          Name
-        </label>  
-      </div>
-      <div class="col-span-2">
-        <input 
-          type="text" 
-          id="name"
-          name="name"
-          formControlName="name"
-          required
-          value="{{ user.name }}"
-          class="col-span-2 w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-200 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-300 focus:ring-2 focus:ring-gray-200"
-        >
-        @if(updateProfileForm.get('name')?.invalid && updateProfileForm.get('name')?.touched) {
-          @if(updateProfileForm.get('name')?.errors?.['required']) {
-            <span class="text-red-600 ml-1 text-xs sm:text-sm">Name is required</span>
+    <form [formGroup]="updateProfileForm" (ngSubmit)="onSubmit()">
+      <div class="grid grid-cols-3  items-center gap-4 sm:gap-6">
+        <div>
+          <label for="name" class="font-medium font-sans text-sm sm:text-base text-gray-800">
+            Name
+          </label>  
+        </div>
+        <div class="col-span-2">
+          <input 
+            type="text" 
+            id="name"
+            name="name"
+            formControlName="name"
+            required
+            value="{{ user.name }}"
+            class="col-span-2 w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-200 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-300 focus:ring-2 focus:ring-gray-200"
+          >
+          @if(updateProfileForm.get('name')?.invalid && updateProfileForm.get('name')?.touched) {
+            @if(updateProfileForm.get('name')?.errors?.['required']) {
+              <span class="text-red-600 ml-1 text-xs sm:text-sm">Name is required</span>
+            }
           }
-        }
-      </div>
-      <div>
-        <label for="email" class="font-medium font-sans text-sm sm:text-base text-gray-800">
-          Email
-        </label>  
-      </div>
-      <div class="col-span-2">
-        <input 
-          type="email" 
-          id="email"
-          name="email"
-          formControlName="email"
-          required
-          value="{{ user.email }}"
-          class="col-span-2 w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-200 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-300 focus:ring-2 focus:ring-gray-200"
-        >
-        @if(updateProfileForm.get('email')?.invalid && updateProfileForm.get('email')?.touched) {
-          @if(updateProfileForm.get('email')?.errors?.['required']) {
-            <span class="text-red-600 ml-1 text-xs sm:text-sm">Email is required</span>
-          } @else if (updateProfileForm.get('email')?.errors?.['email']) {
-            <span class="text-red-600 ml-1 text-xs sm:text-sm">Invalid email format</span>
+        </div>
+        <div>
+          <label for="email" class="font-medium font-sans text-sm sm:text-base text-gray-800">
+            Email
+          </label>  
+        </div>
+        <div class="col-span-2">
+          <input 
+            type="email" 
+            id="email"
+            name="email"
+            formControlName="email"
+            required
+            value="{{ user.email }}"
+            class="col-span-2 w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-200 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-300 focus:ring-2 focus:ring-gray-200"
+          >
+          @if(updateProfileForm.get('email')?.invalid && updateProfileForm.get('email')?.touched) {
+            @if(updateProfileForm.get('email')?.errors?.['required']) {
+              <span class="text-red-600 ml-1 text-xs sm:text-sm">Email is required</span>
+            } @else if (updateProfileForm.get('email')?.errors?.['email']) {
+              <span class="text-red-600 ml-1 text-xs sm:text-sm">Invalid email format</span>
+            }
           }
-        }
-      </div>
-      <div>
-        <label for="phoneNumber" class="font-medium font-sans text-sm sm:text-base text-gray-800">
-          Phone Number
-        </label>  
-      </div>
-      <div class="col-span-2">
-        <input 
-          type="number" 
-          id="phoneNumber"
-          name="phoneNumber"
-          formControlName="phoneNumber"
-          required
-          value="{{ user.phoneNumber }}"
-          class="col-span-2 w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-200 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-300 focus:ring-2 focus:ring-gray-200"
-        >
-        @if(updateProfileForm.get('phoneNumber')?.invalid && updateProfileForm.get('phoneNumber')?.touched) {
-          @if(updateProfileForm.get('phoneNumber')?.errors?.['required']) {
-            <span class="text-red-600 ml-1 text-xs sm:text-sm">Phone number is required</span>
+        </div>
+        <div>
+          <label for="phoneNumber" class="font-medium font-sans text-sm sm:text-base text-gray-800">
+            Phone Number
+          </label>  
+        </div>
+        <div class="col-span-2">
+          <input 
+            type="number" 
+            id="phoneNumber"
+            name="phoneNumber"
+            formControlName="phoneNumber"
+            required
+            value="{{ user.phoneNumber }}"
+            class="col-span-2 w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border border-gray-200 font-sans text-sm text-gray-800 sm:text-base rounded-xl focus:outline-none focus:border-gray-300 focus:ring-2 focus:ring-gray-200"
+          >
+          @if(updateProfileForm.get('phoneNumber')?.invalid && updateProfileForm.get('phoneNumber')?.touched) {
+            @if(updateProfileForm.get('phoneNumber')?.errors?.['required']) {
+              <span class="text-red-600 ml-1 text-xs sm:text-sm">Phone number is required</span>
+            }
           }
-        }
+        </div>
       </div>
-    </div>
-    <div class="flex flex-row justify-end items-center mt-6 sm:mt-8">
-      <button type="submit" class="bg-gray-800 text-white text-sm sm:text-base rounded-xl px-4 sm:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100 duration-100 ease-in">
-        @if(isLoading) {
-          <app-loading-button></app-loading-button>
-        } @else {
-          Update Profile
-        }
-      </button>
-    </div>
-  </form>
+      <div class="flex flex-row justify-end items-center mt-4 sm:mt-6">
+        <button type="submit" class="bg-gray-800 text-white text-sm sm:text-base rounded-xl px-4 sm:px-6 py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100 duration-100 ease-in">
+          @if(isLoading) {
+            <app-loading-button></app-loading-button>
+          } @else {
+            Update Profile
+          }
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
