--- a/src/app/shared/layout/navbar/navbar.component.html
+++ b/src/app/shared/layout/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="px-4 py-2 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-4">
     <div class="flex items-center justify-between">
       <div class="sm:hidden"></div>
-      <button (click)="toggleSidebar()" class="sm:hidden my-2 text-gray-800 hover:text-gray-950">
+      <button (click)="toggleSidebar()" class="sm:hidden p-2 text-gray-800 hover:bg-gray-200 rounded-xl duration-100 ease-in">
         <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M4 6h16M4 12h16m-7 6h7"></path>
         </svg>
@@ -21,16 +21,16 @@
       </ul>
       @if(isLoggedIn){
         <div class="hidden sm:flex items-center space-x-2 sm:space-x-4">
-          <a routerLink="/dashboard" class="inline-flex items-center justify-center bg-gray-800 text-white border-2 border-gray-800 text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-gray-900 hover:border-gray-900 hover:text-gray-100">
+          <a routerLink="/dashboard" class="inline-flex items-center justify-center bg-gray-800 text-white border-2 border-gray-800 text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-gray-900 hover:border-gray-900 hover:text-gray-100 duration-100 ease-in">
             Dashboard
           </a>
         </div>
       } @else {
         <div class="hidden sm:flex items-center space-x-2 sm:space-x-4">
-          <a routerLink="/login" class="inline-flex items-center justify-center text-gray-800 border-2 border-gray-800 text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-gray-800 hover:text-gray-100">
+          <a routerLink="/login" class="inline-flex items-center justify-center text-gray-800 border-2 border-gray-800 text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-gray-200 hover:border-gray-200 duration-100 ease-in">
             Login
           </a>
-          <a routerLink="/register" class="inline-flex items-center justify-center bg-gray-800 text-white border-2 border-gray-800 text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-gray-900 hover:border-gray-900 hover:text-gray-100">
+          <a routerLink="/register" class="inline-flex items-center justify-center bg-gray-800 text-white border-2 border-gray-800 text-sm sm:text-base rounded-xl px-4 md:px-6 py-1.5 md:py-2 font-medium font-sans hover:bg-gray-900 hover:border-gray-900 hover:text-gray-100 duration-100 ease-in">
             Get Started
           </a>
         </div>  
@@ -44,7 +44,7 @@
     <div (click)="toggleSidebar()" class="fixed inset-0 bg-gray-600 bg-opacity-50"></div>
     <div class="relative flex-1 flex flex-col max-w-36 w-full bg-blue-100 bg-opacity-75">
       <div class="absolute top-0 right-0 mr-36 pt-3">
-        <button (click)="toggleSidebar()" class="mr-1 flex items-center justify-center h-10 w-10 rounded-full focus:outline-none focus:bg-gray-600">
+        <button (click)="toggleSidebar()" class="mr-1 p-2 flex items-center justify-center h-10 w-10 focus:outline-none rounded-lg hover:bg-gray-200 duration-100 ease-in">
           <svg class="h-6 w-6 text-gray-800" stroke="currentColor" fill="none" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
           </svg>
@@ -63,14 +63,22 @@
             </li>
           }
         </ul>
-        <div class="mt-5 ml-4 space-y-4">
-          <a routerLink="/login" class="inline-flex items-center justify-center bg-gray-800 text-white text-sm sm:text-base rounded-xl px-4 py-2 md:py-2.5 font-sans hover:bg-gray-900 hover:text-gray-100">
-            Login
-          </a>
-          <a routerLink="/register" class="inline-flex items-center justify-center bg-gray-800 text-white text-sm sm:text-base rounded-xl px-4 py-2 md:py-2.5 font-sans hover:bg-gray-900 hover:text-gray-100">
-            Get Started
-          </a>
-        </div>
+        @if(isLoggedIn){
+          <div class="mt-5 ml-4 space-y-4">
+            <a routerLink="/dashboard" class="inline-flex items-center justify-center bg-gray-800 text-white text-sm sm:text-base rounded-xl px-4 py-2 md:py-2.5 font-sans hover:bg-gray-900 hover:text-gray-100 duration-100 ease-in">
+              Dashboard
+            </a>
+          </div>  
+        } @else {
+          <div class="mt-5 ml-4 space-y-4">
+            <a routerLink="/login" class="inline-flex items-center justify-center border-2 border-gray-800 text-gray-800 text-sm sm:text-base rounded-xl px-4 py-2 md:py-2.5 font-sans hover:bg-gray-200 hover:border-gray-200 duration-100 ease-in">
+              Login
+            </a>
+            <a routerLink="/register" class="inline-flex items-center justify-center bg-gray-800 text-white text-sm sm:text-base rounded-xl px-4 py-2 md:py-2.5 font-sans hover:bg-gray-900 hover:text-gray-100 duration-100 ease-in">
+              Get Started
+            </a>
+          </div>
+        }
       </div>
     </div>
   </div>
