--- a/src/app/shared/ui/alert-error/alert-error.component.html
+++ b/src/app/shared/ui/alert-error/alert-error.component.html
@@ -1,4 +1,4 @@
-<div class="bg-red-100 border-2 border-red-400  px-2.5 sm:px-3 py-1.5 sm:py-2 rounded-xl relative" role="alert">
+<div class="relative mb-4 bg-red-100 border-2 border-red-400  px-2.5 sm:px-3 py-1.5 sm:py-2 rounded-xl" role="alert">
   <span class="block sm:inline text-red-800 font-sans text-sm sm:text-base font-semibold">{{ errorMessage }}</span>
   <span class="absolute top-0 bottom-0 right-0 px-2.5 sm:px-3 py-1.5 sm:py-2" (click)="emitClearMessage()"  role="button">
     <svg class="fill-current h-5 w-5 sm:h-6 sm:w-6 text-red-800" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
