--- a/src/app/shared/ui/modal-qrcode/modal-qrcode.component.html
+++ b/src/app/shared/ui/modal-qrcode/modal-qrcode.component.html
@@ -1,7 +1,7 @@
 <div class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
   <div class="bg-gradient-to-tr w-auto from-pink-50 to-blue-200 rounded-2xl pb-6 pt-3 px-6 sm:pb-8 sm:pt-4 sm:px-8 border-2 border-gray-100">
     <div class="flex justify-end mb-4">
-      <button (click)="closeModal()" class="inline-flex px-2 items-center justify-center rounded-lg hover:bg-gray-200">
+      <button (click)="closeModal()" class="inline-flex px-2 items-center justify-center rounded-lg hover:bg-gray-200 duration-100 ease-in">
         <fa-icon [icon]="faTimes" class="text-2xl sm:text-3xl text-pink-800"></fa-icon>
       </button>
     </div>
