fix: fix request server credentials

--- a/src/app/pages/page-shorten-url/page-shorten-url.component.html
+++ b/src/app/pages/page-shorten-url/page-shorten-url.component.html
@@ -24,7 +24,7 @@
               </tr>
             </thead>
             <tbody class="divide-y divide-gray-300 text-sm sm:text-base">
-              @if(shortenUrlHistory){
+              @if(shortenUrlHistory.length === 0){
                 <p class="px-3 sm:px-6 py-1.5 sm:py-3 text-center font-sans text-gray-800">
                   No data found
                 </p>
